added testfiles and jacoco for coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build
 
+      - name: TestCoverage
+        run: ./gradlew clean test jacocoTestReport check
+
         env:
           SPRING_DATASOURCE_URL: ${{ secrets.DB_URL }}
           SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USERNAME }}
