--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,33 +3,48 @@ name: CI Pipeline
 on:
   push:
     branches: [ "main" ]
+env:
+  SPRING_DATASOURCE_URL: ${{ secrets.DB_URL }}
+  SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USERNAME }}
+  SPRING_DATASOURCE_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  SPRING_SECURITY_PASSWORD: ${{ secrets.BASEAUTH_PASSWORD }}
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
+      # 1.Checkout Code
       - name: Checkout code
         uses: actions/checkout@v4
-
+      # 2.Set up JDK
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
-
+      # 3. Make Gradlew executable
       - name: Make gradlew executable
         run: chmod +x ./gradlew
-
-      # 3. Build with gradle
+      # 4. Build with gradle
       - name: Build with Gradle
         run: ./gradlew clean build
+  test_Coverage:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      # 1.Checkout Code
+      - name: Checkout code
+        uses: actions/checkout@v4
+       # 2.Set up JDK
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+       # 3. Make Gradlew executable
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
+      # 4. Build with gradle
+      - name:  Run Tests and Generate Coverage
+        run:  ./gradlew clean test jacocoTestReport jacocoTestCoverageVerification
 
-      - name: TestCoverage
-        run: ./gradlew clean test jacocoTestReport check
-
-        env:
-          SPRING_DATASOURCE_URL: ${{ secrets.DB_URL }}
-          SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USERNAME }}
-          SPRING_DATASOURCE_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          SPRING_SECURITY_PASSWORD: ${{ secrets.BASEAUTH_PASSWORD }}
