changed to BUNDLE

--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,7 @@ jacocoTestReport {
 jacocoTestCoverageVerification {
     violationRules {
         rule {
-            element = 'CLASS'
+            element = 'BUNDLE'
 
             excludes = [
                     '**/config/**',                         // Exclude config package
