--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,4 +47,19 @@ jobs:
       # 4. Build with gradle
       - name:  Run Tests and Generate Coverage
         run:  ./gradlew clean test jacocoTestReport jacocoTestCoverageVerification
+  docker-image:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        run: actions/checkout@v4
+      - name: Login into DockerHub
+        run: docker/login-actionv@4
+        with:
+          username: ${{secrets.DOCKER_USERNAME
+          password: ${{secrets.DOCKER_PASSWORD
+      - name: Build Docker Image
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/farmer-service:latest
+      - name: Push Docker Image
+        run: docker push ${{secrets.DOCKER_USERNAME}}/farmer-service:latest
 
