--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,13 +53,16 @@ jobs:
     steps:
       - name: Checkout code
         run: actions/checkout@v4
-      - name: Login into DockerHub
-        run: docker/login-actionv@4
+
+      - name:  Login into DockerHub
+        uses:  docker/login-actionv@4
         with:
           username: ${{secrets.DOCKER_USERNAME
           password: ${{secrets.DOCKER_PASSWORD
+
       - name: Build Docker Image
         run: docker build -t ${{secrets.DOCKER_USERNAME}}/farmer-service:latest
+
       - name: Push Docker Image
         run: docker push ${{secrets.DOCKER_USERNAME}}/farmer-service:latest
 
