--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,8 +57,8 @@ jobs:
       - name:  Login into DockerHub
         uses:  docker/login-actionv@4
         with:
-          username: ${{secrets.DOCKER_USERNAME
-          password: ${{secrets.DOCKER_PASSWORD
+          username: ${{secrets.DOCKER_USERNAME}}
+          password: ${{secrets.DOCKER_PASSWORD}}
 
       - name: Build Docker Image
         run: docker build -t ${{secrets.DOCKER_USERNAME}}/farmer-service:latest
