--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
         run: actions/checkout@v4
 
       - name:  Login into DockerHub
-        uses:  docker/login-actionv@4
+        uses:  docker/login-action@v4
         with:
           username: ${{secrets.DOCKER_USERNAME}}
           password: ${{secrets.DOCKER_PASSWORD}}
