--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
           password: ${{secrets.DOCKER_PASSWORD}}
 
       - name: Build Docker Image
-        run: docker build -t ${{secrets.DOCKER_USERNAME}}/farmer-service:latest
+        run: docker build -t ${{secrets.DOCKER_USERNAME}}/farmer-service:latest .
 
       - name: Push Docker Image
         run: docker push ${{secrets.DOCKER_USERNAME}}/farmer-service:latest
