--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      # 4. Build with gradle
+      - name: Build with Gradle
+        run: chmod +x ./gradlew && ./gradlew clean build
+
       - name:  Login into DockerHub
         uses:  docker/login-action@v2
         with:
